<resources>
    <string name="action_change_vault_pin">Change Pin</string>
    <string name="action_choose_image">Choose Image</string>
    <string name="action_clear">Clear</string>
    <string name="action_color_black">Black</string>
    <string name="action_color_blue">Blue</string>
    <string name="action_color_green">Green</string>
    <string name="action_color_grey">Grey</string>
    <string name="action_color_lightblue">Light Blue</string>
    <string name="action_color_lightgreen">Light Green</string>
    <string name="action_color_orange">Orange</string>
    <string name="action_color_purple">Purple</string>
    <string name="action_color_red">Red</string>
    <string name="action_color_yellow">Yellow</string>
    <string name="action_contextbar_refresh">Refresh</string>
    <string name="action_contextbar_select_all">Select All</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_paint">Delete Drawing</string>
    <string name="action_discard_edit_note">Discard Changes</string>
    <string name="action_draw_image">Draw Image</string>
    <string name="action_eraser">Eraser</string>
    <string name="action_next_image">Next Image</string>
    <string name="action_record_audio">Record Audio</string>
    <string name="action_save_paint">Save Drawing</string>
    <string name="action_save_record">Save Recording</string>
    <string name="action_stroke_big">Stroke Big</string>
    <string name="action_stroke_medium">Stroke Medium</string>
    <string name="action_stroke_small">Stroke Small</string>
    <string name="action_take_photo">Take Photo</string>
    <string name="action_void_edit_note">Send into the void.</string>
    <string name="acton_cancel">Cancel</string>
    <string name="anxietyInfoButton">About Anxiety</string>
    <string name="anxietyInfoCredits">Information taken from https://www.psycom.net/bookstore.anxiety.html</string>
    <string name="anxietyInfoHeaderOne">Generalised Anxiety Disorder</string>
    <string name="anxietyInfoHeaderTwo">Symptoms</string>
    <string name="anxietyInfoSubtextOne">Generalized Anxiety Disorder is different than having a phobia about something in the sense that people with GAD have an uneasy feeling about life in general. \nOften associated with feelings of dread or unease, you are in a state of constant worry over everything. There is no “off” switch. \nIf you are suffering from Generalized Anxiety Disorder, you are experiencing a constant state of worry – and you cannot avoid it, because life, in general, is causing you anxiety.</string>
    <string name="anxietyInfoSubtextThree">• Perpetual state of constant worry\n• Inability to relax or enjoy quiet time\n• Muscle tightness or body aches\n• Feeling tense\n• Avoidance of stressful situations\n• Difficulty concentrating or focusing on things\n• No tolerance for uncertainty – needing to know what is going to happen and how it is going to happen\n• Constant feelings of dread or apprehension\n• Feeling overwhelmed and avoiding things or situations because of it\n• Intrusive thoughts of things that cause you to worry – even when you try to stop thinking about them\n• Feeling like you can’t control your emotions and constant worry – nothing you do helps you to relax\n• Not being able to sleep at all or to sleep well because you are in a constant state of worry\n• Feeling jumpy, on edge, or restless\n• Stomach upset – including nausea and diarrhea\n• Fatiguing easily\n• Heart palpitations – feeling like your heart is racing\n• Trembles or shakes\n• Sweating and dry mouth\n• Having difficulty breathing and/or feeling like you are choking\n• Feeling lightheaded or dizzy\n• Cold chills or hot flashes\n• Numbness or tingling sensations\n• Feeling like you have a lump in your throat\n• Persistent irritability</string>
    <string name="anxietyInfoSubtextTwo">Studies have shown that if you are living with Generalized Anxiety Disorder, you are more likely to also suffer from other mental health issues and ailments. \nCommon conditions that are associated with Generalized Anxiety Disorder include depression(https://www.psycom.net/depression.central.html), irritable bowel syndrome, stress, attention deficit hyperactivity disorder(https://www.psycom.net/adult-adhd/), and substance abuse(https://www.psycom.net/depression.central.substance.html).</string>
    <string name="anxietyInfoTextFour">We strongly suggest going through the following link for more information regarding the Symptoms, Diagnosis, Causes and Treatment Options of Generalised Anxiety Disorder: https://www.psycom.net/bookstore.anxiety.html\nDISCLAIMER: The creators of the app are not responsible for the information on the website.</string>
    <string name="anxietyInfoTextOne">If you find yourself in constant worry over anything and everything in your life, even when there should be no cause for concern, you might be suffering from Generalized Anxiety Disorder.</string>
    <string name="anxietyInfoTextThree">Some of the symptoms of GAD are:</string>
    <string name="anxietyInfoTextTwo">Generalized Anxiety Disorder is one of the most common anxiety disorders. While it can occur at any point of life, the most common points of onset occur between childhood and middle age. \nIf you are a woman, you are twice as likely to suffer from Generalized Anxiety Disorder than men.</string>
    <string name="app_name">Kind Companion</string>
    <string name="audioCardImagePlayPauseContentDescription">Play or pause the audio playback image button.</string>
    <string name="audioRecorderImagePlayPauseContentDescription">Play or pause the recording playback image button.</string>
    <string name="audioRecorderImageRecordContentDescription">Start recording image button</string>
    <string name="audioRecorderImageStopContentDescription">Stop recording image button.</string>
    <string name="audioViewImagePlayPauseContentDescription">Play or pause the audio playback image button.</string>
    <string name="befreindersWorldwideResourceButton">Befreinders Worldwide</string>
    <string name="biometricLoginButton">Login</string>
    <string name="breatheIn">Breathe In.</string>
    <string name="breatheOut">Breathe Out.</string>
    <string name="breathingGetReady">Get Ready.</string>
    <string name="breathingInfoTextView">This will guide you through some controlled breathing! \n Press Start to begin.</string>
    <string name="breathingStart">Start</string>
    <string name="breathingStartStopButton">Start</string>
    <string name="breathingStop">Stop</string>
    <string name="controlledBreathingButton">Controlled Breathing</string>
    <string name="crossItOffButton">Cross It Off</string>
    <string name="crossItOffFooter">When you get to a bigger task, you will already be feeling like you are back in control of your life. Break tasks down to smaller ones and keep crossing them off (dont forget to do this!).</string>
    <string name="crossItOffHeader">When you feel like you are spiraling out of control and not getting anything done, use this technique!</string>
    <string name="crossItOffSubtextOne">Important: Be sure to include things that are easy to do! Like \"drink a glass of water\" or \"store away the remote\".</string>
    <string name="crossItOffSubtextThree">As you do this, be aware of the fact that you are finishing a task! Think to yourself, "one thing is done". This is a huge step for your brain.</string>
    <string name="crossItOffTextFive">Do it!</string>
    <string name="crossItOffTextFour">Pick something else from the list. Another easy task.</string>
    <string name="crossItOffTextOne">Make a list of all the things you feel bogged down with.</string>
    <string name="crossItOffTextSix">Cross it off the list.</string>
    <string name="crossItOffTextThree">Cross the task off the list.</string>
    <string name="crossItOffTextTwo">Get a glass of water and drink it, or any other easy thing on the list.</string>
    <string name="depressionInfoButton">About Depression</string>
    <string name="depressionInfoCredits">Information taken from https://www.psycom.net/depression.central.html</string>
    <string name="depressionInfoHeaderOne">Depression</string>
    <string name="depressionInfoHeaderTwo">Causes</string>
    <string name="depressionInfoSubtextThree">• The brain’s physical structure or chemistry\n• History of depression in the family\n• History of other disorders (anxiety, post-traumatic stress disorder)\n• Stressful, traumatic events (abuse, financial issues, death of a loved one)\n• Hormone changes (menstrual cycles, pregnancy)\n• Certain medications (sleeping aids, blood pressure medication)</string>
    <string name="depressionInfoTextFour">We strongly suggest going through the following link for more information regarding the Types, Symptoms, Statistics and Treatment Options of Depression: https://www.psycom.net/depression.central.html\nDISCLAIMER: The creators of the app are not responsible for the information on the website.</string>
    <string name="depressionInfoTextOne">Depression is more than just feeling sad. Everyone feels upset or unmotivated from time to time, but depression is more serious. \nIt is a mood disorder characterized by prolonged feelings of sadness and loss of interest in daily activities. If these symptoms persist for a period of at least two weeks, it is considered a depressive episode.</string>
    <string name="depressionInfoTextThree">There is no one cause for depression, as it depends on a unique combination of an individual’s genetic makeup and environmental conditions. \nThere are many factors to take into account:</string>
    <string name="fifthMainButton">Vault</string>
    <string name="firstMainButton">Calm Down Quickly</string>
    <string name="fiveThingsButton">Five Things Game</string>
    <string name="fiveThingsHeader">If you are ever panicking or feeling anxious, this technique can help calm yourself down.</string>
    <string name="fiveThingsTextOne">This will help distract your brain from the anxiety and the panic. Even with those 3 steps, you might already be calm. It is a very simple technique.</string>
    <string name="fiveThingsTextThree">This game can also be expanded to thinking of animals, birds, colours, objects, movies, plants, foods, etc.</string>
    <string name="fiveThingsTextTwo">If the distraction doesn\'t kick in, try to make this addition - focus on 5 things that you can smell. \nOr try to get your hands on a smell. It distracts you immediately and is a good way to get out of your state.</string>
    <string name="fourthMainButton">Reminders</string>
    <string name="frontPageWelcomeMessage">Welcome to Kind Companion!</string>
    <string name="headspaceResourceButton">Headspace</string>
    <string name="imageViewItem">User-inserted image</string>
    <string name="mindfullnessToolsButton">Mindfulness</string>
    <string name="mindfulnessToolSubtextOne">• Take a minute or more, on purpose.\n• Try to be aware of everything that is going on in and around you.\n• Don\'t expect anything, just be curious.\n• Focus on the thoughts, sensations and feelings that come and go.</string>
    <string name="number_five">5.</string>
    <string name="number_four">4.</string>
    <string name="number_one">1.</string>
    <string name="number_six">6.</string>
    <string name="number_three">3.</string>
    <string name="number_two">2.</string>
    <string name="save">SAVE</string>
    <string name="secondMainButton">Deal With Anxiety</string>
    <string name="sixthMainButton">Settings</string>
    <string name="thirdMainButton">Useful Information</string>
    <string name="crossItOffSubHeader">This can work even if you are not a list person.</string>
</resources>