<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_save_edit_note"
        android:title="@string/save"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_save_24" />

    <item
        android:id="@+id/action_delete_edit_note"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_delete_24" />

    <item
        android:id="@+id/action_discard_edit_note"
        android:title="@string/action_discard_edit_note"
        app:showAsAction="never" /> <!-- add icon later -->

    <item
        android:id="@+id/action_void_edit_note"
        android:title="@string/action_void_edit_note"
        app:showAsAction="never" /> <!-- add icon later -->


</menu>