<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- options: add image from gallery, take image from camera, draw image, record audio -->

    <item
        android:id="@+id/action_take_photo"
        android:title="@string/action_take_photo"
        app:showAsAction="never"
        android:icon="@drawable/baseline_add_a_photo_24" /> <!-- add icon later -->
    <item
        android:id="@+id/action_choose_image"
        android:title="@string/action_choose_image"
        app:showAsAction="never"
        android:icon="@drawable/baseline_add_photo_alternate_24" /> <!-- add icon later -->
    <item
        android:id="@+id/action_draw_image"
        android:title="@string/action_draw_image"
        app:showAsAction="never"
        android:icon="@drawable/baseline_brush_24" /> <!-- add icon later -->
    <item
        android:id="@+id/action_record_audio"
        android:title="@string/action_record_audio"
        app:showAsAction="never"
        android:icon="@drawable/baseline_record_voice_over_24" /> <!-- add icon later -->
</menu>