<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FrontPageActivity">

    <Button
        android:id="@+id/firstMainButton"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:onClick="OnClickNewNote"
        android:text="@string/firstMainButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/secondMainButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/secondMainButton"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:text="@string/secondMainButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/thirdMainButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/firstMainButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/thirdMainButton"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:onClick="OnClickSettingsButton"
        android:text="@string/thirdMainButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/secondMainButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fourthMainButton"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:onClick="OnClickReminders"
        android:text="@string/fourthMainButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fifthMainButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondMainButton" />

    <Button
        android:id="@+id/fifthMainButton"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:text="@string/fifthMainButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sixthMainButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fourthMainButton"
        app:layout_constraintTop_toBottomOf="@+id/secondMainButton"
        app:layout_constraintVertical_bias="0.501" />

    <Button
        android:id="@+id/sixthMainButton"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:text="@string/sixthMainButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fifthMainButton"
        app:layout_constraintTop_toBottomOf="@+id/thirdMainButton"
        app:layout_constraintVertical_bias="0.501" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frontPageWelcomeMessage"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/secondMainButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.216" />

</androidx.constraintlayout.widget.ConstraintLayout>