<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".CrossItOffActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/crossItOffTopBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <TextView
                android:id="@+id/crossItOffHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/big_margin"
                android:layout_marginTop="@dimen/big_margin"
                android:layout_marginEnd="@dimen/big_margin"
                android:layout_marginBottom="@dimen/big_margin"
                android:gravity="center"
                android:text="@string/crossItOffHeader"
                android:textAppearance="?attr/textAppearanceHeadline5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/crossItOffSubHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/big_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/big_margin"
                android:layout_marginBottom="@dimen/big_margin"
                android:gravity="center"
                android:text="@string/crossItOffSubHeader"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crossItOffHeader"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/crossItOffNumberOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/big_margin"
                android:layout_marginTop="@dimen/big_margin"
                android:text="@string/number_one"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/crossItOffTextOne"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crossItOffSubHeader"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/crossItOffTextOne"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_margin"
                android:layout_marginEnd="@dimen/big_margin"
                android:text="@string/crossItOffTextOne"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/crossItOffNumberOne"
                app:layout_constraintTop_toBottomOf="@+id/crossItOffSubHeader"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/crossItOffSubtextOne"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/big_margin"
                android:layout_marginBottom="@dimen/big_margin"
                android:text="@string/crossItOffSubtextOne"
                android:textAppearance="?attr/textAppearanceBody2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/crossItOffNumberOne"
                app:layout_constraintTop_toBottomOf="@+id/crossItOffTextOne"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/crossItOffNumberTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/big_margin"
                android:layout_marginTop="@dimen/big_margin"
                android:layout_marginBottom="@dimen/big_margin"
                android:text="@string/number_two"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/crossItOffTextTwo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crossItOffSubtextOne"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/crossItOffTextTwo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_margin"
                android:layout_marginEnd="@dimen/big_margin"
                android:layout_marginBottom="@dimen/big_margin"
                android:text="@string/crossItOffTextTwo"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/crossItOffNumberTwo"
                app:layout_constraintTop_toBottomOf="@+id/crossItOffSubtextOne"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/crossItOffNumberThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/big_margin"
                android:layout_marginTop="@dimen/big_margin"
                android:text="@string/number_three"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/crossItOffTextThree"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crossItOffTextTwo"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/crossItOffTextThree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_margin"
                android:layout_marginEnd="@dimen/big_margin"
                android:text="@string/crossItOffTextThree"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/crossItOffNumberThree"
                app:layout_constraintTop_toBottomOf="@+id/crossItOffTextTwo"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/crossItOffSubtextThree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/big_margin"
                android:layout_marginBottom="@dimen/big_margin"
                android:text="@string/crossItOffSubtextThree"
                android:textAppearance="?attr/textAppearanceBody2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/crossItOffNumberThree"
                app:layout_constraintTop_toBottomOf="@+id/crossItOffTextThree"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/crossItOffNumberFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/big_margin"
                android:layout_marginTop="@dimen/big_margin"
                android:layout_marginBottom="@dimen/big_margin"
                android:text="@string/number_four"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/crossItOffTextFour"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crossItOffSubtextThree"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/crossItOffTextFour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_margin"
                android:layout_marginEnd="@dimen/big_margin"
                android:layout_marginBottom="@dimen/big_margin"
                android:text="@string/crossItOffTextFour"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/crossItOffNumberFour"
                app:layout_constraintTop_toBottomOf="@+id/crossItOffSubtextThree"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/crossItOffNumberFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/big_margin"
                android:layout_marginTop="@dimen/big_margin"
                android:layout_marginBottom="@dimen/big_margin"
                android:text="@string/number_five"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/crossItOffTextFive"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crossItOffTextFour"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/crossItOffTextFive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_margin"
                android:layout_marginEnd="@dimen/big_margin"
                android:layout_marginBottom="@dimen/big_margin"
                android:text="@string/crossItOffTextFive"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/crossItOffNumberFive"
                app:layout_constraintTop_toBottomOf="@+id/crossItOffTextFour"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/crossItOffNumberSix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/big_margin"
                android:layout_marginTop="@dimen/big_margin"
                android:layout_marginBottom="@dimen/big_margin"
                android:text="@string/number_six"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/crossItOffTextSix"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crossItOffTextFive"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/crossItOffTextSix"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_margin"
                android:layout_marginEnd="@dimen/big_margin"
                android:layout_marginBottom="@dimen/big_margin"
                android:text="@string/crossItOffTextSix"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/crossItOffNumberSix"
                app:layout_constraintTop_toBottomOf="@+id/crossItOffTextFive"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/crossItOffFooter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/big_margin"
                android:layout_marginTop="@dimen/big_margin"
                android:layout_marginEnd="@dimen/big_margin"
                android:layout_marginBottom="@dimen/big_margin"
                android:text="@string/crossItOffFooter"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crossItOffTextSix"
                app:layout_constraintVertical_bias="0.0" />

            <!--
            <TextView
                android:id="@+id/crossItOffCredits"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/big_margin"
                android:layout_marginTop="@dimen/big_margin"
                android:layout_marginEnd="@dimen/big_margin"
                android:layout_marginBottom="@dimen/big_margin"
                android:gravity="end"
                android:text="@string/crossItOffCredits"
                android:textAppearance="?attr/textAppearanceCaption"
                android:textColor="?attr/colorOnSurface"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crossItOffFooter"
                app:layout_constraintVertical_bias="0.0" />
                 -->

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>